turtleart.stairs.Stairs.scala.error
Erreur de compilation :
Stairs:6: error: ')' expected but ';' found.
   avance(35;Double);
            ^Stairs:6: error: ';' expected but ')' found.
   avance(35;Double);
                   ^