turtleart.stairs.Stairs.scala.code
override def run() {
 n=6; 
  while (n>=0) {
   avance(35:Double);
   droite(90:Double);
   avance(35;Double);
  }
}